[project]
name = "news-topic-classifier"
version = "0.1.0"
description = "A reproducible baseline for four-class news-topic classification."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas>=2.2.3",
  "scikit-learn>=1.5.2",
]

[project.optional-dependencies]
transformer = [
  "accelerate>=1.3.0",
  "datasets>=3.2.0",
  "protobuf>=5.29.0",
  "sentencepiece>=0.2.0",
  "torch>=2.6.0",
  "transformers>=4.48.0,<5",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.0",
]

[project.scripts]
news-classify = "news_classifier.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
