[project]
name = "stock-forecast"
version = "0.1.0"
description = "ARIMA-based stock-price forecasting from CSV time series."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chronos-forecasting==2.3.1",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "peft>=0.18",
    "statsmodels>=0.14",
    "torch>=2.2,<3",
]

[project.scripts]
stock-forecast = "stock_forecast.cli:main"
stock-backtest = "stock_forecast.backtest_cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/stock_forecast"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
